--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^4.0.0-beta.0"
   },
   "dependencies": {
-    "vue": "^3.2.14"
+    "vue": "^3.2.14",
+    "vue-router": "^4.3.0"
   }
 }
